# ECLARE

./: .batch_run_ablations.py.swp  CHANGELOG.md  Dockerfile  README.md  batch_run_ablations.py  pyproject.toml  setup.py
eclare/: eclare.py  espreso.py  main.py
eclare/models/: espreso_d.py  espreso_g.py  losses.py  wdsr.py
eclare/utils/: augmentations.py  blur_kernel_ops.py  misc_utils.py  pad.py  parse_image_file.py  patch_ops.py  plot.py  train_set.py
